fixed styles to work with dark mode

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,10 @@
 @use "assets/styles/_dark.scss" as dark;
 
 @mixin light {
+  .formInputs {
+    width: 100%;
+  }
+
   header {
     position: absolute;
     min-height: 30vh;
@@ -45,6 +49,7 @@
     border-radius: 5px;
     border: none;
     .inputCheck {
+      border: solid black 1px;
       margin-left: 4px;
     }
   }
@@ -80,6 +85,9 @@
     height: 40vh;
     width: 100%;
     background-color: #ffffff;
+    .inputCheck {
+      border: solid black 1px;
+    }
   }
 
   footer {
@@ -120,9 +128,41 @@
     }
   }
 
-  @media only screen and (max-width: 600px) {
-    main {
-      width: 80%;
+  i {
+    list-style: none;
+    width: 100%;
+  }
+
+  .todosList {
+    margin: 0;
+    padding: 0;
+    height: 90%;
+    overflow-y: auto;
+  }
+  .emptyListFieldset {
+    border: none;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90%;
+    .svgIcon {
+      height: auto;
+
+      width: 40%;
     }
+    h5 {
+      bottom: 0;
+      left: 30px;
+      font-size: 15px;
+      font-weight: 600;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  main {
+    width: 80%;
   }
 }
